@@ -157,18 +157,13 @@
     <build>
         <plugins>
 
-            <!-- ✅ Compiler Plugin: hỗ trợ JDK 21 + bật preview features -->
+            <!-- ✅ Compiler Plugin: hỗ trợ JDK 21 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
                     <release>21</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -179,6 +174,11 @@
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
                             <version>${org.mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>com.markomilos.jsonapi</groupId>
+                            <artifactId>jsonapi-compiler</artifactId>
+                            <version>1.1.0</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -198,13 +198,12 @@
                 </configuration>
             </plugin>
 
-            <!-- ✅ Surefire Plugin: bật preview cho quá trình run/test -->
+            <!-- ✅ Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.3</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
